--- a/Lab1/studentmanag.html
+++ b/Lab1/studentmanag.html
@@ -72,7 +72,7 @@
           <li><a href="mail@christuniversity.in">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
       </div>
     </div>
